2013-02-01  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Re-try enabling Win-EWS tests for the third time. 
        https://bugs.webkit.org/show_bug.cgi?id=107968

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-01-31  Roger Fong  <roger_fong@apple.com>

        Fix test scripts for EWS bots to get them running once and for all.
        https://bugs.webkit.org/show_bug.cgi?id=108422

        Reviewed by Timothy Horton.

        Disabling --quiet option on Windows for now because that fails when we try to use /dev/null.
        runtests.py was not passing in a configuration to run-webkit-tests which causes DRT to build in release by default.
        However, we build in Debug only on the EWS Windows bots, which caused the build to fail.

        * Scripts/webkitpy/tool/steps/runtests.py:
        (RunTests.options):
        (RunTests.run):

2013-02-01  Nico Weber  <thakis@chromium.org>

        [chromium] Build webkit with enable_web_intents set to 0.
        https://bugs.webkit.org/show_bug.cgi?id=108408

        Reviewed by Tony Chang.

        I'll then make chromium build fine with that, then switch
        enable_web_intents to 0, roll that into webkit, and then
        actually remove the code hidden behind this flag.

        * DumpRenderTree/chromium/TestRunner/src/TestRunner.cpp:
        (WebTestRunner::TestRunner::TestRunner):
        * DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:
        (WebTestRunner::WebTestProxyBase::registerIntentService):
        (WebTestRunner::WebTestProxyBase::dispatchIntent):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        * DumpRenderTree/chromium/WebViewHost.h:
        (WebViewHost):

2013-02-01  Zan Dobersek  <zdobersek@igalia.com>

        Set the GTK 64-bit Debug builder to build and test only WebKit1
        https://bugs.webkit.org/show_bug.cgi?id=108648

        Reviewed by Philippe Normand.
